--- a/delivery.pug
+++ b/delivery.pug
@@ -8,7 +8,7 @@ html
         main
             section.container.advina
                 .row
-                    .col-xs-12
+                    .col-sm-12
                         h1 Какие существуют способы оплаты?
                         p Способ оплаты любого заказа Вы выбираете при его оформлении. Оплата в Интернет-магазине производится только в рублях. После подтверждения заказа оператором Интернет-магазина способ оплаты изменен быть не может.
                     .col-sm-12.col-md-4
