--- a/index.pug
+++ b/index.pug
@@ -55,15 +55,15 @@ html
                             WhatsApp: +7 (977) 255-57-00</strong>
             section.container.advina.text-centered
                 .row
-                    .col-xs-6.col-sm-2.col-md-offset-1
+                    .col-xs-6.col-sm-3.col-md-2.col-md-offset-2
                         img(src='./assets/img/document.png' alt="")
                         p: a(href="#") Политика возврата
-                    .col-xs-6.col-sm-2.col-md-offset-1
+                    .col-xs-6.col-sm-3.col-md-2
                         img(src='./assets/img/document.png' alt="")
-                        p: a(href="#") Политика конфидкенциальности
-                    .col-xs-6.col-sm-2.col-md-offset-1
+                        p: a(href="#") Политика конфиден&shy;циальности
+                    .col-xs-6.col-sm-3.col-md-2
                         img(src='./assets/img/document.png' alt="")
                         p: a(href="#") Публичная оферта действ. до 17.07.2017
-                    .col-xs-6.col-sm-2.col-md-offset-1
+                    .col-xs-6.col-sm-3.col-md-2
                         img(src='./assets/img/document.png' alt="")
                         p: a(href="#") Публичная оферта действ. до 18.07.2017
