--- a/delivery.pug
+++ b/delivery.pug
@@ -4,7 +4,43 @@ html
         link(rel="stylesheet" type="text/css" href="./assets/css/main.min.css")
         link(rel="stylesheet" type="text/css" href="./assets/css/style.css")
         link(rel="stylesheet" type="text/css" href="./assets/css/advina.css")
-    body
+    body.has-fixed-menu
+        <header class="main-header">
+        <div class="container">
+        <div class="row">
+        <div class="col-sm-2 col-xs-6">
+        <a class="main-header__logo" href="#">
+        <img src="./assets/img/logo.jpg" alt="">
+        </a>
+        </div>
+        <div class="col-sm-8 hide-tablet center">
+        <nav class="main-header__nav">
+        <ul>
+        <li><a href="/content/about/">О нас</a></li>
+        <li><a href="/catalog/butilirovannaya_voda/">Каталог товаров</a></li>
+        <li><a href="#">С нами выгодно!</a></li>
+        <li><a href="/content/delivery/">Доставка</a></li>
+        <li><a href="/content/payment/">Оплата</a></li>
+        <li><a href="/content/contacts/">Контакты</a></li>
+        </ul>
+        </nav>
+        </div>
+        <div class="col-sm-2 col-xs-6 pull-right">
+        <div class="main-header__right  bl-info">
+        <a class="main-header-plus" href="#">
+        <img src="./assets/img/main-header-plus.png" alt="" popup="auth" onclick="popupOpen(this);">
+        </a>
+
+        <a href="/personal/cart/" class="bl-top">
+        <!--'start_frame_cache_basketinfo'-->		<img src="./assets/img/main-basket.png" alt="Корзина">
+        <span class="count">0</span>
+        </a>
+        <!--'end_frame_cache_basketinfo'--><!--                     <a href="#" popup="registration" class="okmr-link-gray" onclick="popupOpen(this)">Регистрация</a> -->
+        </div>
+        </div>
+        </div>
+        </div>
+        </header>
         main
             section.container.advina
                 .row
@@ -54,3 +90,14 @@ html
                             h1 Карта доставки
                             p Обратите внимание на зоны доставки, обратите внимание на зоны доставки, обратите внимание на зоны доставки!
                 <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Ab7f25d14c47484e349cda7b4d30dc9f6d4e485bbddee098525b4ab11d7dd5c28&amp;source=constructor" width="100%" height="568" frameborder="0"></iframe>
+            script(src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous")
+            script.
+                var prev = 0;
+                var $window = $(window);
+                var nav = $('.main-header');
+
+                $window.on('scroll', function () {
+                    var scrollTop = $window.scrollTop();
+                    nav.toggleClass('main-header--scrolled', scrollTop > prev);
+                    prev = scrollTop;
+                });
