--- a/assets/css/advina.css
+++ b/assets/css/advina.css
@@ -163,6 +163,7 @@
     top: 0;
     left: 0;
     width: 100%;
+    box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.2);
 }
 .main-header--scrolled .main-header__logo img {
     height: 50px;
